[metadata]
name = term_rst_post
version = 1.1.0
author = Alex Domingo
author_email = alex.domingo.toro@vub.be
description = Read news from ABlog and convert them to text using ANSI escape code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sisc-hpc/term_rst_post
project_urls =
    Bug Tracker = https://github.com/sisc-hpc/term_rst_post/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
scripts =
    bin/news2motd
    bin/rst2ansi
python_requires = >=3.6
install_requires =
    ablog>=0.10.0
    beautifulsoup4
    docutils
test_requires =
    pytest

[options.packages.find]
where = src
